Sinead Twine formatting 60%
the title says it all!

--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -122,14 +122,74 @@
                     if (x==1) {
                         document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
                         To: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        Date: Fri, Mar 13, 11:07pm<br>\
+                        Date: Fri, Mar 13, 10:07pm<br>\
                         Subject: The world is ending??!<br>";
                     }
                     if (x==2) {
                         document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
                         To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        Date: Sunday, March 15, 02:36pm<br>\
-                        Subject: Early summer?<br>";
+                        Date: Sunday, March 15, 5:36pm<br>\
+                        Subject: February, festival, and french toast<br>";
+                    }
+                    if (x==3) {
+                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        Date: Wed, Apr 1, 7:32pm<br>\
+                        Subject: Lockdown fun!<br>";
+                    }
+                    if (x==4) {
+                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        Date: Sunday, April 17, 4:36 pm<br>\
+                        Subject: Sheltering, sun, and sugar<br>";
+                    }
+                    if (x==5) {
+                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        Date: Mon, May 13, 2:26pm<br>\
+                        Subject: Nightmares and birthdays!<br>";
+                    }
+                    if (x==6) {
+                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        Date: Sunday, May 17, 12:23pm<br>\
+                        Subject: Floating, fever dreams, and final classes<br>";
+                    }
+                    if (x==7) {
+                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        Date: Mon, Jun 8, 19:32pm<br>\
+                        Subject: Protests and shop openings<br>";
+                    }
+                    if (x==8) {
+                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        Date: Monday, June 8, 12:03 pm<br>\
+                        Subject: Rallying, root beer, and what’s right<br>";
+                    }
+                    if (x==9) {
+                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        Date: Monday, July 20, 8:46pm<br>\
+                        Subject: Writing camps and travel rumours<br>";
+                    }
+                    if (x==10) {
+                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        Date: Friday, July 23, 7:54pm<br>\
+                        Subject: Home, heat, and hospital calls<br>";
+                    }
+                    if (x==11) {
+                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        Date: Fri, Aug 14, 1:46pm<br>\
+                        Subject: Connemara adventures and secondary school soon!<br>";
+                    }
+                    if (x==12) {
+                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
+                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        Date: Friday, August 14, 7:54pm<br>\
+                        Subject: School, safety, and shared excitement<br>";
                     }
                 }
             </script>
