--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <!-- Title -->
         <div class="row justify-content-center">
             <div class="col-8 mxml-5">
-              <img src="/images/team.svg" class="img-fluid mx-auto d-block title" alt="Responsive image">
+              <img src="/images/about.svg" class="img-fluid mx-auto d-block title" alt="Responsive image">
             </div>
         </div>
         <!-- Mission Statement -->
