--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="images/white-logo.svg"/>
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet"> <!-- Playfair font-->
         
     <title>Columbia Int Fic: what IF</title>
@@ -31,64 +31,142 @@
         </div>
         <!-- Members -->
         <div class="row justify-content-center">
-            <div class="col-2 text-justify member">
-                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
-                <h4>Name</h4>
-                <p>A short sentence or two about yourself, interests etc.</p>
-                <img src="images/membermail.svg" style="width:40px">
-                <img src="images/memberlinkedin.svg" style="width:40px">
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member1" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member1">
+              <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
             </div>
-            <div class="col-2 text-justify member">
-                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
-                <h4>Name</h4>
-                <p>A short sentence or two about yourself, interests etc.</p>
-                <img src="images/membermail.svg" style="width:40px">
-                <img src="images/memberlinkedin.svg" style="width:40px">
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member2" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member2">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
             </div>
-            <div class="col-2 text-justify member">
-                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
-                <h4>Name</h4>
-                <p>A short sentence or two about yourself, interests etc.</p>
-                <img src="images/membermail.svg" style="width:40px">
-                <img src="images/memberlinkedin.svg" style="width:40px">
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member3" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member3">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
             </div>
-            <div class="col-2 text-justify member">
-                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
-                <h4>Name</h4>
-                <p>A short sentence or two about yourself, interests etc.</p>
-                <img src="images/membermail.svg" style="width:40px">
-                <img src="images/memberlinkedin.svg" style="width:40px">
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member4" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member4">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
             </div>
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-2 text-justify member">
-                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
-                <h4>Name</h4>
-                <p>A short sentence or two about yourself, interests etc.</p>
-                <img src="images/membermail.svg" style="width:40px">
-                <img src="images/memberlinkedin.svg" style="width:40px">
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member5" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member5">
+              <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
             </div>
-            <div class="col-2 text-justify member">
-                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
-                <h4>Name</h4>
-                <p>A short sentence or two about yourself, interests etc.</p>
-                <img src="images/membermail.svg" style="width:40px">
-                <img src="images/memberlinkedin.svg" style="width:40px">
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member6" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member6">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
             </div>
-            <div class="col-2 text-justify member">
-                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
-                <h4>Name</h4>
-                <p>A short sentence or two about yourself, interests etc.</p>
-                <img src="images/membermail.svg" style="width:40px">
-                <img src="images/memberlinkedin.svg" style="width:40px">
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member7" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member7">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
             </div>
-            <div class="col-2 text-justify member">
-                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
-                <h4>Name</h4>
-                <p>A short sentence or two about yourself, interests etc.</p>
-                <img src="images/membermail.svg" style="width:40px">
-                <img src="images/memberlinkedin.svg" style="width:40px">
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member8" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member8">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
             </div>
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member9" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member9">
+              <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+            </div>
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member10" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member10">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+            </div>
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member11" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member11">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+            </div>
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member12" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member12">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+            </div>
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-sm-5 text-justify member">
+            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Name</h4>
+            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member13" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member13">
+              <p>BLOOP test cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+            </div>
+            <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
+            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+          </div>
         </div>
 
       <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-bottom">
@@ -98,8 +176,8 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active current" href="about.html">about <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="team.html">meet the team</a>
+            <a class="nav-link" href="about.html">about </a>
+            <a class="nav-link active current" href="team.html">meet the team<span class="sr-only">(current)</span></a>
             <a class="nav-link" href="submit.html">submit a story</a>
           </div>
         </div>
