edit button css

--- a/submit.html
+++ b/submit.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm-10 col-md-6">
-                        <input type="submit" class="btn btn-success btn-send" value="SEND"><img src="/images/sendButton.svg" class="submit-logo">
+                        <input type="submit" class="button" value="SEND"><img src="/images/sendButton.svg" class="submit-logo">
                     </div>
                 </div>
                 <div class="row justify-content-center">
@@ -90,8 +90,8 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="about.html">about </a>
-                <a class="nav-link active current" href="team.html">meet the team<span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="submit.html">submit a story</a>
+                <a class="nav-link" href="team.html">meet the team<span class="sr-only">(current)</span></a>
+                <a class="nav-link active current" href="submit.html">submit a story<span class="sr-only">(current)</span></a>
             </div>
             </div>
         </nav>
