--- a/i-see-you-1.html
+++ b/i-see-you-1.html
@@ -11,7 +11,7 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="i-see-you-1" startnode="18" creator="Twine" creator-version="2.3.9" ifid="1F4298A5-98CE-4D4C-808B-9AD3C35DE62F" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"';
+<tw-storydata name="i-see-you-1" startnode="18" creator="Twine" creator-version="2.3.9" ifid="1F4298A5-98CE-4D4C-808B-9AD3C35DE62F" zoom="0.6" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"';
 
 tw-story {
   font-family: 'Open Sans', sans-serif;
@@ -91,7 +91,7 @@ Today’s job is done. Now, to call about that damn microwave.
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/5.jpg&quot; height=&quot;400&quot; alt=&quot;that damn microwave&quot;&gt; &lt;/center&gt;</tw-passagedata><tw-passagedata pid="14" name="→Click to continue 6" tags="" position="599,1282" size="100,100">You’re ready to perform your femur fracture repair on your patient. Full-face shield: on. N95: on. Additional mask: on. Lead apron for x-rays: on. As we say in the medical field, donning your PPE during surgery is like preparing for war. You begin to scrub for the case, lathering every crevasse of you hands with antimicrobial soap. 
 
-[[→Continue-&gt;→Click to continue 7]] </tw-passagedata><tw-passagedata pid="15" name="→Click to continue 7" tags="" position="599,1432" size="100,100">Mr. Jones lies dormant in the operating room, as the nurses position his legs and prep him in a sterile manner. Femur fractures were always one of your favorite procedures. You don’t even need to recount the steps; somehow your hands remember the method:
+[[→Continue-&gt;→Click to continue 7]] </tw-passagedata><tw-passagedata pid="15" name="→Click to continue 7" tags="" position="597.3333333333334,1432" size="100,100">Mr. Jones lies dormant in the operating room, as the nurses position his legs and prep him in a sterile manner. Femur fractures were always one of your favorite procedures. You don’t even need to recount the steps; somehow your hands remember the method:
 
 	1.  Make incision at hip
 	2.	Confirm entry point portal via fluoroscopy 
@@ -105,9 +105,12 @@ Today’s job is done. Now, to call about that damn microwave.
 	10.	Wounds are closed
 	11.	Dressing is placed
 	
-	[[→Continue-&gt;→Click to continue 8]] </tw-passagedata><tw-passagedata pid="16" name="→Click to continue 8" tags="" position="600,1582" size="100,100">Dr. Carter hovers over Mr. Jones’ body. He is unable to be extubated. The atmosphere in the room is grim, and you bite your lip from under your face masks. None of you are entirely sure how COVID-19 works. Sometimes you believe a patient is doing okay, but they suddenly take a turn for the worse. All that you know is that the disease has affected Mr. Jones’ lungs and breathing. He is in a temporary coma and you are unsure of when he will awake. Mr. Jones is carted to the ICU and hooked up to a ventilator. You call the family to provide updates on Mr. Jones’ surgery since Methodist still doesn’t accept visitors. It’s all in constant limbo as to when we can return to normal. 
-But at least for today, your work is done. Your laser focus lessens and everything grows heavy: the bags under your eyes, the tension in your right shoulder and the soreness in your feet from excessive standing. Outer mask: off. Face shield: off. Face mask: still on. Scrubs: dirty hamper. It’s time to go home.
-COVID-19 looms heavy over all us, even with particle matter of just 125 nanometers. But we keep telling ourselves to fix what we can. Despite the decrease in the number of COVID-19 positive patients, there’s certainly still a risk. But it was just like the 90s with the HIV/AID pandemic. Our duty has never wavered. 
+	[[→Continue-&gt;→Click to continue 8]] </tw-passagedata><tw-passagedata pid="16" name="→Click to continue 8" tags="" position="600,1582" size="100,100">Dr. Carter hovers over Mr. Jones’ body. He is unable to be extubated. The atmosphere in the room is grim, and you bite your lip from under your face masks. None of you are entirely sure how COVID-19 works. Sometimes you believe a patient is doing okay, but they suddenly take a turn for the worse. All you know is that the disease has affected Mr. Jones’ lungs and breathing. He is in a temporary coma and you don’t know when or if he will awake. Mr. Jones is carted to the ICU and hooked up to a ventilator. Now for the worst part. You hate having to this, but it’s part of your job; your fingers slowly hover over the buttons before you dial the number of Mr. Jones’ family. Detached, you explain that there were complications and he won’t be coming home. All his wife can do is sob into the phone––Methodist still doesn’t accept visitors.
+
+
+Once the phone call ends, you realize how exhausted you are. Your laser focus lessens and everything grows heavy: the bags under your eyes, the tension in your right shoulder and the soreness in your feet from excessive standing. The feeling of potentially losing a patient is a distant pain in your chest. Outer mask: off. Face shield: off. Face mask: still on. Scrubs: dirty hamper. It’s time to go home.
+
+For you, there’s always been an instant gratification to orthopedic surgery. Your patient came in this morning and couldn’t walk. In about 6 to 12 weeks, he’ll be able to. Sprains, fractures, tears are all within your scope of repair. But with the pandemic, nothing feels concrete. Patients go to sleep and never wake up––no one knows why. COVID-19 looms heavy over all us, even with particle matter of just 125 nanometers. But we keep telling ourselves to fix what we can. Despite the decrease in the number of COVID-19 positive patients, there’s certainly still a risk. But it was just like the 90s with the HIV/AID pandemic. Our duty has never wavered. 
 
 Today’s job is done. Now, to call about that damn microwave.
 
