--- a/index.html
+++ b/index.html
@@ -102,6 +102,26 @@
               popup.classList.toggle("show");
             }
           </script>
+
+          <div class="fullscreen">
+              <button class="fs-btn" onclick="fullscr()">
+                <span class="tooltiptext">    Go fullscreen for an immersive experience. </span>
+              </button>
+                  <script>
+                    var elem = document.documentElement;
+                    function fullscr() {
+                        if (elem.requestFullscreen) {
+                        elem.requestFullscreen();
+                      } else if (elem.msRequestFullscreen) {
+                        elem.msRequestFullscreen();
+                      } else if (elem.mozRequestFullScreen) {
+                        elem.mozRequestFullScreen();
+                      } else if (elem.webkitRequestFullscreen) {
+                        elem.webkitRequestFullscreen();
+                      }
+                    }
+                  </script>
+            </div>
         </div>
     </main>
   
