--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -97,22 +97,40 @@
                         console.log("bg: " + s);
                         var body = document.getElementById("story-body");
                         if (s==1) {
-                            body.style.backgroundImage = "url('images/sinead/bg1.jpg')";
+                            body.style.backgroundImage = "url('images/sinead/bg-1.jpg')";
                         }
                         else if (s==2) {
-                            body.style.backgroundImage = "url('images/sinead/bg2.jpg')";
+                            body.style.backgroundImage = "url('images/sinead/bg-2.jpg')";
                         }
                         else if (s==3) {
-                            body.style.backgroundImage = "url('images/sinead/bg3.jpg')";
+                            body.style.backgroundImage = "url('images/sinead/bg-3.jpg')";
                         }
                         else if (s==4) {
-                            body.style.backgroundImage = "url('images/sinead/bg4.jpg')";
+                            body.style.backgroundImage = "url('images/sinead/bg-4.jpg')";
                         }
                         else if (s==5) {
-                            body.style.backgroundImage = "url('images/sinead/desktop.png')";
+                            body.style.backgroundImage = "url('images/sinead/bg-5.jpg')";
                         }
-                        else if (s=='b') {
-                            body.style.backgroundImage = "url('images/sinead/bg-b.jpg')";
+                        else if (s==6) {
+                            body.style.backgroundImage = "url('images/sinead/bg-6.jpg')";
+                        }
+                        else if (s==7) {
+                            body.style.backgroundImage = "url('images/sinead/bg-7.jpg')";
+                        }
+                        else if (s==8) {
+                            body.style.backgroundImage = "url('images/sinead/bg-8.jpg')";
+                        }
+                        else if (s==9) {
+                            body.style.backgroundImage = "url('images/sinead/bg-9.jpg')";
+                        }
+                        else if (s==10) {
+                            body.style.backgroundImage = "url('images/sinead/bg-10.jpg')";
+                        }
+                        else if (s==11) {
+                            body.style.backgroundImage = "url('images/sinead/bg-11.jpg')";
+                        }
+                        else if (s==12) {
+                            body.style.backgroundImage = "url('images/sinead/bg-12.jpg')";
                         }
                     }
                     else if (semail=="email") {
