--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <!-- Story One -->
           <div class="popup" onclick="myFunction()"><p><u><a href="#story1" onMouseOver="return changeImage()" onMouseOut= "return changeImageBack()" ><img
 name="jsbutton" src="images/unclicked.svg" width="42" height="42" border="0"
-alt="javascript button" class="img-fluid" id="story1"></a></u></p><span class="popuptext" id="myPopup1"> 
+alt="javascript button" class="img-fluid" id="story1"></a></u></p><span class="popuptext" id="myPopup1"><span class="close">&times;</span> 
             <h1>A Doubled Front</h1>
             <p>This is story number one. It's awesome. (Should be on New York)<br>
               <a href="doubledfrontstory.html" class="enterButton">enter</a>
@@ -64,7 +64,7 @@ alt="javascript button" class="img-fluid" id="story1"></a></u></p><span class="p
           <!-- Story Two -->
           <div class="popup" onclick="myFunction2()"><p><u><a href="#story2" onMouseOver="return changeImage2()" onMouseOut= "return changeImageBack2()" ><img
 name="jsbutton2" src="images/unclicked.svg" width="42" height="42" border="0"
-alt="javascript button" class="img-fluid" id="story2"></a></u></p><span class="popuptext" id="myPopup2"> 
+alt="javascript button" class="img-fluid" id="story2"></a></u></p><span class="popuptext" id="myPopup2"><span class="close">&times;</span>
             <h1>Digital Sex Crimes in South Korea</h1>
             <p>This is story number three. It's awesome. (Should be over South Korea. This placement might be tricky)<br>
           <a href="SallyLaurenDraft2.html" class="enterButton">enter</a>
@@ -74,7 +74,7 @@ alt="javascript button" class="img-fluid" id="story2"></a></u></p><span class="p
           <!-- Story Three -->
           <div class="popup" onclick="myFunction3()"><p><u><a href="#story3" onMouseOver="return changeImage3()" onMouseOut= "return changeImageBack3()" ><img
 name="jsbutton3" src="images/unclicked.svg" width="42" height="42" border="0"
-alt="javascript button" class="img-fluid" id="story3"></a></u></p><span class="popuptext" id="myPopup3"> 
+alt="javascript button" class="img-fluid" id="story3"></a></u></p><span class="popuptext" id="myPopup3"><span class="close">&times;</span>
             <h1>I See You</h1>
             <p>This is story number three. It's awesome. (Should be over Philly-ish. This placement might be tricky)<br>
           <a href="i-see-you-1.html" class="enterButton">enter</a>
@@ -84,7 +84,7 @@ alt="javascript button" class="img-fluid" id="story3"></a></u></p><span class="p
           <!-- Story Four -->
           <div class="popup" onclick="myFunction4()"><p><u><a href="#story4" onMouseOver="return changeImage4()" onMouseOut= "return changeImageBack4()" ><img
 name="jsbutton4" src="images/unclicked.svg" width="42" height="42" border="0"
-alt="javascript button" class="img-fluid" id="story4"></a></u></p><span class="popuptext" id="myPopup4"> 
+alt="javascript button" class="img-fluid" id="story4"></a></u></p><span class="popuptext" id="myPopup4"><span class="close">&times;</span>
             <h1>Sinead & Louisa</h1>
             <p>This is story number four. It's awesome. (This should be over Ireland, though the story also occurs in New Orleans)
                 <br><a href="sinead-page-1.html" class="enterButton">enter</a>
